[gd_scene load_steps=3 format=3 uid="uid://bbuwktmewxico"]

[ext_resource type="LabelSettings" uid="uid://7ie7kstfk3rm" path="res://debug_label.tres" id="1_d6fru"]
[ext_resource type="Script" path="res://Scenes/debug_label.gd" id="1_ejncm"]

[node name="DebugLabel" type="Node2D"]
script = ExtResource("1_ejncm")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -100.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.4)

[node name="HBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -44.0
offset_right = 54.0
offset_bottom = 44.0
grow_vertical = 2
theme_override_constants/separation = 0

[node name="DebugLabel1" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Line 1"
label_settings = ExtResource("1_d6fru")
vertical_alignment = 1

[node name="DebugLabel2" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Line 2"
label_settings = ExtResource("1_d6fru")
vertical_alignment = 1

[node name="DebugLabel3" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Line 3"
label_settings = ExtResource("1_d6fru")
vertical_alignment = 1

[node name="DebugLabel4" type="Label" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Line 4"
label_settings = ExtResource("1_d6fru")
vertical_alignment = 1
